# xbbg

./: .changelog_entry.md  .coveragerc  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  404.html  BLOOMBERG_PACKAGES_BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  PR_DESCRIPTION.md  README.md  RELEASE_PROCESS.md  SECURITY.md  deny.toml  index.html  pixi.toml  pydoc-markdown.yml  pyproject.toml  renovate.json  requirements.txt  setup.py  xbbg_jupyter_examples.ipynb
apps/xbbg-cli/: Cargo.toml  README.md
apps/xbbg-cli/src/: main.rs
apps/xbbg-mcp/: Cargo.toml  README.md
apps/xbbg-mcp/src/: main.rs  request_adapter.rs
apps/xbbg-server/: Cargo.toml  README.md
apps/xbbg-server/src/: main.rs
bindings/dotnet-xbbg/: Cargo.toml  README.md
bindings/dotnet-xbbg/src/: lib.rs
bindings/napi-xbbg/: Cargo.toml  README.md
bindings/napi-xbbg/src/: arrow_zero_copy.rs  ext.rs  lib.rs  request.rs
bindings/pyo3-xbbg/: Cargo.toml  build.rs  pyproject.toml
bindings/pyo3-xbbg/src/: ext.rs  lib.rs  markets.rs  native_arrow.rs  recipes.rs  request.rs
crates/blpapi-sys/: Cargo.toml  README.md  build.rs  libclang.rs
crates/blpapi-sys/src/: lib.rs  xb_ext.c
crates/datamock/: Cargo.toml  README.md  build.rs  compile_commands.json
crates/datamock-sys/: Cargo.toml  build.rs
crates/datamock-sys/src/: lib.rs
crates/datamock/cpp/include/datamock/: bemu_headers.h  datamock_c_api.h
crates/datamock/cpp/src/: datamock_c_api.cpp
crates/datamock/cpp/src/BloombergTypes/: Constant.cpp  ConstantList.cpp  CorrelationId.cpp  Datetime.cpp  Element.cpp  ElementPtr.cpp  Event.cpp  EventPtr.cpp  Message.cpp  MessageIterator.cpp  MessagePtr.cpp  Name.cpp  Request.cpp  RequestPtr.cpp  SchemaElementDefinition.cpp  SchemaTypeDefinition.cpp  Service.cpp  ServiceRefData.cpp  Session.cpp  SessionTimerFunction.cpp  Subscription.cpp
crates/datamock/cpp/src/HistoricalDataRequest/: HistoricElement.cpp  HistoricElementDateTime.cpp  HistoricElementDouble.cpp  HistoricElementEidDataArray.cpp  HistoricElementErrorInfo.cpp  HistoricElementFieldData.cpp  HistoricElementFieldDataArray.cpp  HistoricElementFieldExceptions.cpp  HistoricElementFieldExceptionsArray.cpp  HistoricElementInt.cpp  HistoricElementSecurityData.cpp  (+8 more)
crates/datamock/src/: lib.rs
crates/datamock/tests/: c_api.rs
crates/pyo3-xbbg/: Cargo.toml  README.md
crates/pyo3-xbbg/src/: ext.rs  lib.rs
crates/xbbg-arrow/: Cargo.toml
crates/xbbg-arrow/src/: column.rs  error.rs  lib.rs  scalar.rs  table.rs
crates/xbbg-async/: Cargo.toml  README.md
crates/xbbg-async/src/: config.rs  dispatcher.rs  errors.rs  field_cache.rs  lib.rs  metrics.rs  request_builder.rs  requests.rs  schema_cache.rs  schema_validation.rs  sdk_logging.rs  services.rs  status.rs  subscriptions.rs  tests.rs
crates/xbbg-async/src/engine/: dispatch.rs  exchange.rs  exchange_cache.rs  intraday_timezone.rs  mod.rs  pump_a.rs  pump_b.rs  pump_c.rs  request_plan.rs  request_pool.rs  subscription_pool.rs  transport.rs  worker.rs
crates/xbbg-async/src/router/: mod.rs  shard.rs
crates/xbbg-async/src/schema/: cache.rs  introspector.rs  mod.rs  types.rs
crates/xbbg-async/src/snapshot/: handle.rs  manager.rs
crates/xbbg-async/tests/: engine_integration.rs  live.rs
crates/xbbg-bench/: Cargo.toml  README.md
crates/xbbg-bench/benches/: alloc_criterion.rs  alloc_profile.rs  arrow_builder_append.rs  async_subscription_replay.rs  cache_contention.rs  cached_subscription_arrow.rs  datetime.rs  live_bdp.rs  live_bdp_profiled.rs  live_subscription.rs  lockfree_paths.rs  name.rs  parse_cached.rs  xbbg_benchmark_suite.rs
crates/xbbg-bench/src/: lib.rs
crates/xbbg-core/: Cargo.toml  README.md
crates/xbbg-core/benches/: alloc_criterion.rs  alloc_profile.rs  datetime.rs  live_bdp.rs  live_bdp_profiled.rs  live_subscription.rs  name.rs  parse_cached.rs
crates/xbbg-core/benchmarks/results/: xbbg_core_bdp_1769074743.json  xbbg_core_bdp_1769228486.json  xbbg_core_bdp_1769228970.json  xbbg_core_bdp_1769229034.json  xbbg_core_bdp_1769229043.json  xbbg_core_bdp_1769229441.json  xbbg_core_bdp_1769229805.json  xbbg_core_subscription_latest.json
crates/xbbg-core/docs/: core_concepts.md  polling.md
crates/xbbg-core/examples/: bdp.rs  bdtick.rs  get_by_str_probe.rs  instruments.rs  raw_response_probe.rs  raw_sub_probe.rs  reconnect_probe.rs  schema_tick.rs  tasvc.rs
crates/xbbg-core/src/: async_session.rs  auth.rs  correlation.rs  datatype.rs  datetime.rs  element.rs  errors.rs  event.rs  event_log.rs  ffi.rs  identity.rs  lib.rs  message.rs  name.rs  options.rs  poller.rs  print.rs  request.rs  request_template.rs  service.rs  session.rs  simd.rs  socks5.rs  subscription.rs  tag_registry.rs  tests.rs  tls.rs  value.rs  zfp.rs
crates/xbbg-core/src/arrow/: fields_arrow.rs  hist_arrow.rs  intraday_bars_arrow.rs  intraday_ticks_arrow.rs  mod.rs  refdata_arrow.rs
crates/xbbg-core/src/requests/: bulk.rs  fields.rs  hist.rs  intraday_bars.rs  intraday_ticks.rs  mod.rs  refdata.rs
crates/xbbg-core/src/schema/: constant.rs  element_def.rs  mod.rs  operation.rs  serialize.rs  type_def.rs  types.rs  validation.rs
crates/xbbg-core/tests/: arrow_queries.rs  live.rs
crates/xbbg-ext/: Cargo.toml
crates/xbbg-ext/benches/: pivot.rs
crates/xbbg-ext/src/: constants.rs  error.rs  lib.rs
crates/xbbg-ext/src/markets/: exchange.rs  mod.rs  overrides.rs  sessions.rs  timezone.rs
crates/xbbg-ext/src/resolvers/: cdx.rs  futures.rs  mod.rs
crates/xbbg-ext/src/transforms/: bql.rs  currency.rs  fixed_income.rs  historical.rs  mod.rs
crates/xbbg-ext/src/utils/: date.rs  mod.rs  pivot.rs  ticker.rs
crates/xbbg-log/: Cargo.toml  README.md
crates/xbbg-log/src/: lib.rs
crates/xbbg-recipes/: Cargo.toml
crates/xbbg-recipes/src/: currency.rs  error.rs  fixed_income.rs  futures.rs  historical.rs  identifiers.rs  indices.rs  lib.rs  utils.rs  volatility.rs
crates/xbbg-sys/: Cargo.toml  README.md  build.rs
crates/xbbg-sys/src/: lib.rs  shim.rs  stubs.rs  stubs_new.rs  stubs_old.rs
(+706 files in other folders)
