[workspace]
members = [
    # Core engine
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    "crates/datamock",
    "crates/datamock-sys",
    # Language bindings
    "bindings/pyo3-xbbg",
    "bindings/napi-xbbg",
    # "bindings/dotnet-xbbg",
    # Applications
    # "apps/xbbg-cli",
    "apps/xbbg-server",
    "apps/xbbg-mcp",
]
# Omit datamock / datamock-sys so plain `cargo build` / `cargo test` at the repo
# root does not compile the mock stack; use `cargo test -p datamock` or
# `cargo build --workspace` when working on it. The `mock` Cargo feature stays
# optional on xbbg-sys and downstream crates.
default-members = [
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    "bindings/pyo3-xbbg",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/alpha-xone/xbbg"
edition = "2021"

# =============================================================================
# Release Profile Optimizations
# =============================================================================
# These settings significantly improve runtime performance at the cost of
# longer compile times. For development, use `cargo build` (debug profile).
#
# Build with: cargo build --release
# For maximum performance: RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.release]
lto = "fat"           # Full link-time optimization across all crates
codegen-units = 1     # Single codegen unit = better optimization opportunities
panic = "abort"       # No unwinding = smaller/faster code (can't catch panics)
strip = "symbols"     # Remove debug symbols for smaller binary

# Optimize all deps in dev builds (many are unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2
