[workspace]
members = [
    # Core engine
    "crates/xbbg-arrow",
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    # Language bindings
    "bindings/pyo3-xbbg",
    "bindings/napi-xbbg",
    # "bindings/dotnet-xbbg",
    # Applications
    # "apps/xbbg-cli",
    "apps/xbbg-mcp",
]
default-members = [
    "crates/xbbg-arrow",
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    "bindings/pyo3-xbbg",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/alpha-xone/xbbg"
edition = "2021"

# =============================================================================
# Size-first Release Profile
# =============================================================================
# Python wheels ship the Rust extension to every user, so release builds optimize
# primarily for install size while preserving LTO and single-codegen-unit output.
# Performance-sensitive benchmarking can override opt-level with CARGO_PROFILE_* or
# a dedicated benchmark profile.

[profile.release]
lto = "fat"           # Full link-time optimization across all crates
codegen-units = 1     # Single codegen unit = better optimization opportunities
panic = "abort"       # No unwinding = smaller/faster code (can't catch panics)
strip = "symbols"     # Remove debug symbols for smaller binary
opt-level = "z"       # Size-first wheels; keep explicit benchmark profiles for speed checks

# Optimize all deps in dev builds (many are unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2
