[workspace]
members = [
    # Core engine
    "crates/xbbg-arrow",
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    # Language bindings
    "bindings/pyo3-xbbg",
    "bindings/napi-xbbg",
    # "bindings/dotnet-xbbg",
    # Applications
    # "apps/xbbg-cli",
    "apps/xbbg-mcp",
]
default-members = [
    "crates/xbbg-arrow",
    "crates/xbbg-core",
    "crates/blpapi-sys",
    "crates/xbbg-async",
    "crates/xbbg-sys",
    "crates/xbbg-ext",
    "crates/xbbg-recipes",
    "crates/xbbg-log",
    "crates/xbbg-bench",
    "bindings/pyo3-xbbg",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/xbbg-org/xbbg"
edition = "2021"

# =============================================================================
# Performance-first Release Profile
# =============================================================================
# Shipped artifacts (wheels, napi addon, xbbg-mcp) build with this profile, so it
# optimizes for speed: measured 1.25-1.46x on columnar row loops vs opt-level "z"
# (probe over xbbg-arrow build_array/cell_from_array/cell_matches, same LTO/CGU).
# Size-sensitive builds can override with CARGO_PROFILE_RELEASE_OPT_LEVEL=z.

[profile.release]
lto = "fat"           # Full link-time optimization across all crates
codegen-units = 1     # Single codegen unit = better optimization opportunities
panic = "abort"       # No unwinding = smaller/faster code (can't catch panics)
strip = "symbols"     # Remove debug symbols for smaller binary
opt-level = 3         # Speed-first; size delta on wheels is small vs the 25-45% perf cost of "z"

# Optimize all deps in dev builds (many are unusably slow at opt-level 0)
[profile.dev.package."*"]
opt-level = 2
