[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xbbg"
description = "Intuitive Bloomberg data API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Alpha x1", email = "alpha.xone@outlook.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
  "narwhals>=2.14.0",
  "pyarrow>=22.0.0",
]

[project.optional-dependencies]
# DataFrame backends - install what you need
# Eager backends (full API support)
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
# cudf requires NVIDIA GPU + CUDA + Linux - install manually if needed:
#   pip install --extra-index-url https://pypi.nvidia.com cudf-cu12
modin = ["modin[dask]>=0.25"]  # Distributed pandas
# Lazy backends (deferred execution)
duckdb = ["duckdb>=1.0"]
dask = ["dask[dataframe]>=2024.1"]
ibis = ["ibis-framework>=6.0"]
# pyspark requires Java - install manually if needed
sqlframe = ["sqlframe>=3.22"]
# Convenience extras
all-backends = [
  "pandas>=2.0",
  "polars>=0.20",
  "duckdb>=1.0",
  "dask[dataframe]>=2024.1",
  "ibis-framework>=6.0",
]
# Documentation (for ReadTheDocs builds)
docs = ["sphinx>=5.3.0", "sphinx-rtd-theme>=2.0.0", "sphinx-llms-txt>=0.7.0"]

[project.urls]
Homepage = "https://github.com/alpha-xone/xbbg"
Documentation = "https://xbbg.readthedocs.io/"
Source = "https://github.com/alpha-xone/xbbg"
Issues = "https://github.com/alpha-xone/xbbg/issues"
Logo = "https://raw.githubusercontent.com/alpha-xone/xbbg/main/docs/xbbg.png"

[tool.setuptools_scm]
# Accept semantic versioning tags: v0.7.10, v0.7.12a1, v0.7.12b1, v0.7.12rc1
# Also supports legacy xbbg== prefix for backward compatibility
tag_regex = '^(?:v|xbbg==)?(?P<version>\d+\.\d+\.\d+(?:(?:a|b|rc|alpha|beta)\d+)?)$'
fallback_version = "0+unknown"

[tool.setuptools.packages.find]
include = ["xbbg*"]
exclude = ["xbbg.tests*"]

[tool.setuptools.package-data]
xbbg = ["markets/*.yml"]


[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true

[tool.uv.sources]
blpapi = { index = "bloomberg" }

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  "examples/**",
  "docs/_build",
  "docs/conf.py",
  "Examples.ipynb",
  "dist",
  "venv",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "D",   # pydocstyle
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
  "ISC", # implicit string concatenation
  "LOG", # flake8-logging - logging best practices
  "G",   # flake8-logging-format - logging format strings
]
ignore = [
  "E701", # multiple statements on one line (colon)
  "E501", # line too long
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
  "UP031", # Use format specifiers instead of percent format (intentionally using % for performance in logging)
  "S110", # try/except/pass detected (intentional in logging code to avoid recursion, and in fallback logic)
  "G004", # Logging statement uses f-string (we prefer % formatting but allow f-string in some cases)
]

[tool.ruff.lint.per-file-ignores]
"xbbg/__init__.py" = ["F401"]
"xbbg/**/__init__.py" = ["F401"]
"xbbg/tests/**" = ["D"]
"xbbg/core/blpapi_logging.py" = ["S110"]  # Intentional try/except/pass to avoid recursive logging

[tool.ruff.lint.isort]
known-first-party = ["xbbg"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ty]
python-version = "3.10"

[tool.ty.rules]
# Start lenient - tighten over time
possibly-unbound = "warn"

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
  # FutureWarning filter handled in conftest.py to allow XbbgFutureWarning
]
markers = [
  "live_endpoint: marks tests as live Bloomberg endpoint tests (requires --run-xbbg-live to run)",
]
# Show logging output during test execution
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
log_cli_date_format = "%H:%M:%S"

[dependency-groups]
dev = [
    "blpapi",
    "build>=1.0",
    "codecov>=2.1",
    "coverage>=7.11.0",
    "dask[dataframe]>=2026.1.2",
    "duckdb>=1.4.4",
    "ibis-framework>=11.0.0",
    "ipykernel>=6.0",
    "modin[dask]>=0.37.1",
    "pandas>=2.0",
    "polars",
    "pre-commit>=3.0",
    "pyarrow-hotfix>=0.7",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "rich>=14.3.2",
    "ruff>=0.14.3",
    "sqlframe>=3.46.2",
    "twine>=6.0",
]
