[build-system]
requires = ["setuptools>=82", "wheel>=0.46", "setuptools-scm>=9", "setuptools-rust>=1.12"]
build-backend = "setuptools.build_meta"

[project]
name = "xbbg"
description = "Intuitive Bloomberg data API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Alpha x1", email = "alpha.xone@outlook.com" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
  "narwhals>=1.30",
  "pyarrow>=22.0.0",
]

[project.optional-dependencies]
# Minimal extras for downstream consumers; dev tooling is managed by pixi.
test = ["pytest", "pytest-cov", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/alpha-xone/xbbg"
Documentation = "https://alpha-xone.github.io/xbbg"
Source = "https://github.com/alpha-xone/xbbg"
Issues = "https://github.com/alpha-xone/xbbg/issues"

# ── pyo3-stub-gen configuration (reuses maturin keys for compatibility) ───────
[tool.maturin]
module-name = "xbbg._core"
python-source = "py-xbbg/src"

# ── Version from git tags (equivalent to release/0.x setuptools_scm config) ──
[tool.setuptools_scm]
tag_regex = '^(?:v|xbbg==)?(?P<version>\d+\.\d+\.\d+(?:(?:a|b|rc|alpha|beta)\d+)?)$'
fallback_version = "0+unknown"

# ── Rust extension via setuptools-rust ───────────────────────────────────────
[[tool.setuptools-rust.ext-modules]]
target = "xbbg._core"
path = "bindings/pyo3-xbbg/Cargo.toml"
binding = "PyO3"

[tool.setuptools.packages.find]
where = ["py-xbbg/src"]
include = ["xbbg*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  "docs/_build",
  "dist",
  "venv",
  ".venv",
  "**/*.pyi",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "D",    # pydocstyle
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "FA",   # flake8-future-annotations
  "TC",   # flake8-type-checking
  "PERF", # perflint
  "RUF",  # ruff-specific rules
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "D104",   # missing docstring in public package
  "D102",   # missing docstring in public method
  "D103",   # missing docstring in public function
  "D105",   # missing docstring in magic method
  "D107",   # missing docstring in __init__
  "RET504", # unnecessary assign before return
  "RET505", # unnecessary else after return
  "SIM108", # use ternary instead of if-else (readability)
  "RUF022", # unsorted __all__ (we organize by category)
  "PERF203", # try-except in loop (intentional for date parsing)
  "RUF012",  # mutable ClassVar annotations
  "TC001",   # type-checking-only first-party imports
  "TC002",   # type-checking-only third-party imports
  "TC003",   # type-checking-only stdlib imports
  "SIM105",  # contextlib.suppress suggestion (readability preference)
  "C416",    # unnecessary comprehension (dict() vs comprehension is style)
  "RUF002",  # ambiguous unicode in docstring (× is intentional)
  "RUF005",  # collection literal concatenation (readability)
  "PIE810",  # multiple startswith (readability)
  "UP031",   # printf-style formatting (existing code style)
  "PERF401", # manual list comprehension (readability in async contexts)
  "PERF402", # manual list copy
  "PERF403", # manual dict comprehension
  "D417",    # missing arg description (too strict for now)
  "PT011",   # pytest-raises-too-broad
  "PT012",   # pytest-raises-with-multiple-statements
  "PT017",   # pytest-assert-in-except
  "PT018",   # pytest-composite-assertion
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/**" = ["E402", "D", "I001", "F841", "B007"]
"codegen/**" = ["D103"]
"py-xbbg/src/xbbg/__init__.py" = ["F401", "E402"]
"py-xbbg/src/xbbg/**/__init__.py" = ["F401"]
"py-xbbg/tests/live/**" = ["D", "B007", "B905", "F841", "B023", "RUF001"]
"py-xbbg/tests/**" = ["D", "PT"]
"scripts/**" = ["D103"]

[tool.ruff.lint.isort]
known-first-party = ["xbbg"]
combine-as-imports = true
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ty.environment]
python-version = "3.10"
root = ["py-xbbg/src"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.coverage.run]
omit = [
  "py-xbbg/tests/*",
  "*/__init__.py",
  "*/__pycache__/*",
  "*/.venv/*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
  "error::FutureWarning",
]

