[package]
name = "dotnet-xbbg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C#/.NET bindings for xbbg Bloomberg engine"
publish = false

# [lib]
# crate-type = ["cdylib"]

# [dependencies]
# xbbg_core = { path = "../../crates/xbbg-core" }
# xbbg-async = { path = "../../crates/xbbg-async" }
# xbbg-ext = { path = "../../crates/xbbg-ext" }
# xbbg-log = { path = "../../crates/xbbg-log" }
# arrow = "57.1.0"
# tokio = { version = "1", features = ["sync"] }

# [build-dependencies]
# csbindgen = "2"
