[package]
name = "napi-xbbg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "N-API (Node.js) bindings for xbbg Bloomberg engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "tokio_rt", "serde-json", "napi4"] }
napi-derive = "3"
arrow = "57.1.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["sync"] }
xbbg_core = { path = "../../crates/xbbg-core", default-features = false }
xbbg-async = { path = "../../crates/xbbg-async", default-features = false }
xbbg-log = { path = "../../crates/xbbg-log" }
xbbg-recipes = { path = "../../crates/xbbg-recipes", default-features = false }

[features]
default = ["live"]
mock = ["xbbg_core/mock", "xbbg-async/mock", "xbbg-recipes/mock"]
live = ["xbbg_core/live", "xbbg-async/live", "xbbg-recipes/live"]

[build-dependencies]
napi-build = "2"
