[package]
name = "pyo3-xbbg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 bindings for xbbg Bloomberg engine"

[lib]
name = "_core"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = { version = "0.22.1", default-features = false, features = ["infer_signature"], optional = true }
pyo3-stub-gen-derive = { version = "0.22.1", optional = true }
tokio = { version = "1.48", features = ["sync"] }
xbbg-log = { path = "../../crates/xbbg-log" }
arrow-array = { version = "58.1.0", features = ["ffi", "chrono-tz"] }
arrow-schema = { version = "58.1.0", features = ["ffi"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
pyo3-arrow = "0.17"
xbbg-arrow = { path = "../../crates/xbbg-arrow" }
anyhow = "1.0"
serde_json = "1.0"
xbbg_core = { path = "../../crates/xbbg-core", default-features = false }
xbbg-async = { path = "../../crates/xbbg-async", default-features = false }
xbbg-ext = { path = "../../crates/xbbg-ext" }
xbbg-recipes = { path = "../../crates/xbbg-recipes", default-features = false }

[features]
default = ["live", "extension-module"]
extension-module = ["pyo3/extension-module"]
mimalloc = ["dep:mimalloc"]
stub-gen = ["dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
live = ["xbbg_core/live", "xbbg-async/live", "xbbg-recipes/live"]

