[package]
name = "datamock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock library for Bloomberg-style market data API, enabling testing without a terminal connection"
publish = false

[features]
default = []

[dependencies]

[build-dependencies]
cc = "1.0"
glob = "0.3"
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
