[package]
name = "pyo3-xbbg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 bindings for xbbg Bloomberg engine"

[lib]
name = "xbbg_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync"] }
arrow = { version = "57.1.0", features = ["pyarrow"] }
xbbg_core = { path = "../xbbg-core" }
xbbg-async = { path = "../xbbg-async" }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo"] }


