[package]
name = "pyo3-xbbg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 bindings for xbbg Bloomberg engine"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
tokio = { version = "1.48", features = ["sync"] }
xbbg-log = { path = "../xbbg-log" }
arrow = { version = "57.1.0", features = ["pyarrow"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
anyhow = "1.0"
serde_json = "1.0"
xbbg_core = { path = "../xbbg-core" }
xbbg-async = { path = "../xbbg-async" }
xbbg-ext = { path = "../xbbg-ext" }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo"] }

[features]
default = ["live"]
mock = ["xbbg-async/mock"]
live = ["xbbg-async/live"]

