[package]
name = "xbbg-arrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Arrow carrier helpers for xbbg native bindings"

[dependencies]
arrow-array = { version = "58.1.0", features = ["chrono-tz"] }
arrow-ord = "58.1.0"
arrow-schema = "58.1.0"
arrow-select = "58.1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
thiserror = "2"
