[package]
name = "xbbg-async"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Async layer over xbbg-core with pump/router and streams"
publish = false

[dependencies]
xbbg_core = { path = "../xbbg-core" }
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
once_cell = "1.19"
ahash = "0.8"
slab = "0.4"
arrow = "57.1.0"

[features]
default = []
live = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
blpapi-sys = { path = "../blpapi-sys" }


