[package]
name = "xbbg-async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async layer over xbbg-core with pump/router and streams"
publish = false

[dependencies]
xbbg_core = { path = "../xbbg-core" }
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
once_cell = "1.19"
ahash = "0.8"
slab = "0.4"
arrow = "57.1.0"
arrow-json = "57.1.0"
simd-json = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[features]
default = []
live = []

# cargo-udeps false positives (tracing macros not detected)
[package.metadata.cargo-udeps.ignore]
normal = ["tracing"]
development = ["tracing-subscriber"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
blpapi-sys = { path = "../blpapi-sys" }
